--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -1,9 +1,13 @@
 pipeline {
-  agent {
-    docker {
-      image 'abhishekf5/maven-abhishek-docker-agent:v1'
-      args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
-    }
+  agent  any 
+  //{
+    // docker {
+    //   image 'abhishekf5/maven-abhishek-docker-agent:v1'
+    //   args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
+    // }
+  //}
+  tools {
+    maven "Maven3"
   }
   stages {
         stage('Checkout') {
@@ -13,13 +17,14 @@ pipeline {
   //       //git branch: 'main', url: 'https://github.com/iam-veeramalla/Jenkins-Zero-To-Hero.git'
       }
         }
-  //   stage('Build and Test') {
-  //     steps {
+       stage('Build Jar') {
+         steps {
+          sh "mvn clean package"
   //       sh 'ls -ltr'
   //       // build the project and create a JAR file
   //       sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn clean package'
-  //     }
-  //   }
+         }
+      }
   //   stage('Static Code Analysis') {
   //     environment {
   //       SONAR_URL = "http://34.201.116.83:9000"
