--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -7,7 +7,7 @@ pipeline {
     // }
   //}
   tools {
-    maven "Maven3"
+    maven "Apache Maven 3.6.3"
   }
   stages {
         stage('Checkout') {
