--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -19,7 +19,7 @@ pipeline {
         }
        stage('Build Jar') {
          steps {
-          sh "mvn clean package"
+          sh "cd spring-boot-app && mvn clean package"
   //       sh 'ls -ltr'
   //       // build the project and create a JAR file
   //       sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn clean package'
