--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -9,6 +9,11 @@ pipeline {
   tools {
     maven "Apache Maven 3.6.3"
   }
+
+  environment {
+	registry = "634211996823.dkr.ecr.us-east-1.amazonaws.com/spring-boot"
+}
+
   stages {
         stage('Checkout') {
          steps {
@@ -33,7 +38,7 @@ pipeline {
   //       withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
   //         sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
   //       }
-  //     }
+  //     }aws 
   //   }
   //   stage('Build and Push Docker Image') {
   //     environment {
