--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -1,44 +1,46 @@
 pipeline {
   agent  any 
-  //{
-    // docker {
-    //   image 'abhishekf5/maven-abhishek-docker-agent:v1'
-    //   args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
-    // }
-  //}
+
   tools {
     maven "Apache Maven 3.6.3"
   }
 
-  environment {
-	registry = "634211996823.dkr.ecr.us-east-1.amazonaws.com/spring-boot"
-}
+//   environment {
+// 	registry = "634211996823.dkr.ecr.us-east-1.amazonaws.com/spring-boot"
+// }
 
   stages {
         stage('Checkout') {
          steps {
             checkout scmGit(branches: [[name: '*/main']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/karthi770/cicd_eks_00.git']])
-  //       sh 'echo passed'
-  //       //git branch: 'main', url: 'https://github.com/iam-veeramalla/Jenkins-Zero-To-Hero.git'
-      }
         }
+        }
+        
+        stage('Static Code Analysis') {
+       environment {
+         SONAR_URL = "http://34.205.25.157:9000"
+      }
+       steps {
+         withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
+           sh 'cd spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
+         }
+       }
+
        stage('Build Jar') {
          steps {
           sh "cd spring-boot-app && mvn clean package"
            sh 'ls -ltr'
-  //       // build the project and create a JAR file
-  //       sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn clean package'
          }
       }
-  //   stage('Static Code Analysis') {
-  //     environment {
-  //       SONAR_URL = "http://34.201.116.83:9000"
-  //     }
-  //     steps {
-  //       withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-  //         sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app && mvn sonar:sonar -Dsonar.login=$SONAR_AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
-  //       }
-  //     }aws 
+
+      // stage("Build image"){
+      //   steps{
+      //     script {
+      //       docker.build registry
+      //     }
+      //   }
+      // }
+
   //   }
   //   stage('Build and Push Docker Image') {
   //     environment {
