--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -6,7 +6,7 @@ pipeline {
   }
 
   environment {
-	registry = "634211996823.dkr.ecr.us-east-1.amazonaws.com/spring-boot"
+	registry = "public.ecr.aws/c2k4o8g6/spring-boot-eks"
 }
 
   stages {
