--- a/spring-boot-app/Dockerfile
+++ b/spring-boot-app/Dockerfile
@@ -3,7 +3,8 @@
 FROM adoptopenjdk/openjdk11:alpine-jre
 
 # Simply the artifact path
-ARG artifact=target/spring-boot-web.jar
+#ARG artifact=target/spring-boot-web.jar
+ARG artifact=target/
 
 WORKDIR /opt/app
 
