--- a/spring-boot-app/Dockerfile
+++ b/spring-boot-app/Dockerfile
@@ -3,12 +3,12 @@
 FROM adoptopenjdk/openjdk11:alpine-jre
 
 # # Simply the artifact path
-ARG artifact=target/spring-boot-web.jar
-ARG artifact=target/
+# ARG artifact=target/spring-boot-web.jar
+# ARG artifact=target/
 
 WORKDIR /opt/app
 
-COPY ${artifact} app.jar
+COPY target/spring-boot-web.jar app.jar
 
 # This should not be changed
 ENTRYPOINT ["java","-jar","app.jar"]
