--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -42,6 +42,14 @@ pipeline {
         }
       }
 
+      stage("push in ECR"){
+        steps{
+          sh"aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 634211996823.dkr.ecr.us-east-1.amazonaws.com"
+          sh"docker push 634211996823.dkr.ecr.us-east-1.amazonaws.com/spring-boot:latest"
+        }
+
+      }
+
   //   }
   //   stage('Build and Push Docker Image') {
   //     environment {
