--- a/spring-boot-app-manifests/deployment.yml
+++ b/spring-boot-app-manifests/deployment.yml
@@ -15,7 +15,7 @@ spec:
         app: spring-boot-app
     spec:
       containers:
-      - name: spring-boot-app
-        image: abhishekf5/ultimate-cicd:replaceImageTag
-        ports:
-        - containerPort: 8080
+        - name: spring-boot-app
+          image: 634211996823.dkr.ecr.us-east-1.amazonaws.com/spring-boot:latest
+          ports:
+            - containerPort: 8080
