--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -49,6 +49,15 @@ pipeline {
         }
       }
 
+      stage("K8S Deployment"){
+        steps{
+          withKubeConfig(caCertificate: '', clusterName: '', contextName: '', credentialsId: 'K8S', namespace: '', restrictKubeConfigAccess: false, serverUrl: '') {
+            sh "kubectl apply -f deployment.yml"
+}
+
+        }
+      }
+
   //   }
   //   stage('Build and Push Docker Image') {
   //     environment {
